PROJECT (HELLO)
cmake_minimum_required(VERSION 2.8)

MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
# set(CMAKE_C_FLAGS "-arch i386 -arch x86_64")
ADD_SUBDIRECTORY(src bin)
#will use CMAKE_INSTALL_PREFIX


INSTALL(FILES COPYRIGHT README DESTINATION share/doc/api)
INSTALL(FILES run.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/api)

 # INSTALL(FILES files DESTINATION <dir>)
 # INSTALL(PROGRAMS files DESTINATION <dir>)
 # INSTALL(DIRECTORY dirs DESTINATION <dir>)


