SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET(LIB_SRC_LIST lapi.c)

SET(EXE_SRC_LIST main.c)

ADD_LIBRARY (api_static ${LIB_SRC_LIST})
ADD_LIBRARY (api_dynamic SHARED ${LIB_SRC_LIST})


ADD_EXECUTABLE(api ${EXE_SRC_LIST} ${LIB_SRC_LIST})


SET_TARGET_PROPERTIES(api_static PROPERTIES OUTPUT_NAME "api")
SET_TARGET_PROPERTIES(api_dynamic PROPERTIES OUTPUT_NAME "api")

ADD_LIBRARY (api_bundle MODULE ${LIB_SRC_LIST})

INSTALL(TARGETS api api_dynamic api_static
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION static
	)
